force-app/main/default/objects/vlocity_cmt__AccountAdServer__c/vlocity_cmt__AccountAdServer__c.object-meta.xml
<CustomObject>
    <description>The Account Ad Server captures the mapping of an Account with an Ad Server.</description>
    <label>Account Ad Server</label>
    <nameField>
        <label>Account Ad Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Ad Servers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>