force-app/main/default/objects/vlocity_cmt__AccountAdServer__c/fields/vlocity_cmt__AdServerAdvertiserIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerAdvertiserIdentifier__c</fullName>
    <description>This captures the AdvertiserId  in the Ad Server.</description>
    <externalId>true</externalId>
    <label>Ad Server Advertiser Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>