force-app/main/default/objects/vlocity_cmt__AccountAdServer__c/fields/vlocity_cmt__AdServerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ad Server to which the mapping is created.</description>
    <label>Ad Server</label>
    <referenceTo>vlocity_cmt__AdServer__c</referenceTo>
    <relationshipLabel>Account Ad Servers</relationshipLabel>
    <relationshipName>AccountAdServers</relationshipName>
    <type>Lookup</type>
</CustomField>