force-app/main/default/objects/vlocity_cmt__AccountAdServer__c/fields/vlocity_cmt__AdvertiserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdvertiserId__c</fullName>
    <description>Advertiser account mapped to the Ad Server.</description>
    <label>Advertiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Ad Servers</relationshipLabel>
    <relationshipName>AccountAdServers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>